# decision-bot

./: .env.example  .env.test  .eslintrc.js  .flake8  .gitignore  Dockerfile  LICENSE  README.md  TODO_Global.md  Tech Description.md  conftest.py  docker-compose.yml  init_db.py  jest.config.js  lint.sh  package.json  pyproject.toml  pytest.ini  tsconfig.json
app/: config.py  main.py
app/bot/: error_handler.py  init.py  main.py  states.py
app/bot/handlers/: history_handler.py  new_decision_handler.py  outcome_handler.py  start_handler.py
app/bot/interfaces/: i_decision_service.py  i_llm_service.py
app/bot/keyboards/: main_keyboard.py
app/bot/tests/: test_handlers.py  test_keyboards.py  test_use_cases.py
app/bot/use_cases/: new_decision_use_case.py
app/core/: config.py  container.py  logger.py
app/infrastructure/db/: database.py
app/infrastructure/models/: base.py  decision.py  outcome.py  user.py
app/infrastructure/repositories/: decision_repository.py  outcome_repository.py  user_repository.py
app/infrastructure/utils/: create_postgresql_database.py  safe_enum.py  text_utils.py
app/services/: decision_service.py  llm_service.py
app/services/dto/: __init__.py  decision.py  outcome.py  user.py
app/services/interfaces/: i_decision_repository.py  i_decision_service.py  i_outcome_repository.py  i_user_repository.py  llm_service_interface.py
app/tasks/: celery_app.py  follow_up.py
app/tasks/tests/: test_follow_up.py
config/: default.js  test.js
environment/nginx/: hellomyfriend.ru
environment/pm2/: bot.prod.config.js
migrations/: env.py
migrations/versions/: 03f6e06bc51c_initial.py  7bc6083e8668_initial.py  895128ce1298_update_users.py
src/: BotAppModule.ts  bootstrap.ts
src/components/TelegrafBot/: TelegrafBot.ts
src/components/auditLog/: BotAuditLogService.ts  IAuditLogService.ts
src/components/logging/: BotLoggingInterceptor.ts  LoggerFactory.ts  LoggingInterceptor.ts  types.ts
src/core/application/: BotApplication.ts
src/core/config/: Config.ts  types.ts
src/core/db-connector/: DbConnector.ts
src/core/di/: IoC.ts  mockIoC.ts  testIoC.ts
src/core/http-error/: ValidationError.ts
src/core/test/: FakeParams.ts  SceneTest.ts  UnitTest.ts  expectError.ts  mockContext.ts  testRunner.ts  types.ts  unitTestRanner.ts
src/events/: EventEmitter.ts
src/types/: common.ts
(+96 files in other folders)
