[project]
name = "decision-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Dima Panov",email = "rpsdpano@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
package-mode = false  # Отключает упаковку
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "celery (>=5.4.0,<6.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "greenlet (>=3.1.1,<4.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "sqlalchemy-utils (>=0.41.2,<0.42.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "flake8 (>=7.1.1,<8.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "mypy (>=1.15.0,<2.0.0)",
    "types-requests (>=2.32.0.20241016,<3.0.0.0)",
    "python-whois (>=0.9.5,<0.10.0)",
    "aiogram (>=3.18.0,<4.0.0)",
    "playwright (>=1.50.0,<2.0.0)",
    "pytest-asyncio (>=1.0.0,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

#[tool.mypy]
#plugins = ["sqlalchemy.ext.mypy.plugin"]
#
#[mypy]
#strict = true


[tool.poetry.group.dev.dependencies]
types-requests = "^2.32.0.20241016"

