[project]
name = "decision-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Dima Panov",email = "rpsdpano@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
package-mode = false
dependencies = [
    "aiogram (>=3.18.0,<4.0.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "celery (>=5.4.0,<6.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "openai (>=1.0.0,<2.0.0)",
    "dependency-injector (>=4.42.0,<5.0.0)",
    "aiohttp (>=3.9.0,<4.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "pytest-asyncio (>=1.0.0,<2.0.0)",
    "flake8 (>=7.1.1,<8.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "mypy (>=1.15.0,<2.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.poetry.group.dev.dependencies]
types-requests = "^2.32.0.20241016"
